@@ -201,6 +201,6 @@ example23:
     (contributed by Manu Sharma)
 
 example24:
-    This example shows how to use efg.x to calculate de electric field 
+    This example shows how to use efg.x to calculate the electric field 
     gradient, and to obtain the quadrupolar parameters of an NMR experiment.
     The solid in example is quartz. 
